force-app/main/default/objects/StnryAssetEnrgyUse/fields/Business_Region__c.field-meta.xml
<CustomField>
    <fullName>Business_Region__c</fullName>
    <formula>IF(TEXT(StnryAssetEnvrSrc.BusinessRegion) = &apos;&apos;, &apos;Global&apos;, TEXT(StnryAssetEnvrSrc.BusinessRegion))</formula>
    <label>Business Region</label>
    <type>Text</type>
</CustomField>