force-app/main/default/objects/StnryAssetEnrgyUse/fields/Total_Supplemental_Scope_3_Emissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Supplemental_Scope_3_Emissions__c</fullName>
    <formula>SuplScope3DnstrmEmissions + SuplScope3UpstrmEmissions</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Supplemental Scope 3 Emissions</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>